# res-soc

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml
nix/modules/: devshell.nix  rust.nix
src/: main.rs
