[package]
name = "res-soc"
version = "0.1.0"
authors = ["DemyCode <verycols@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
dioxus = { version = "0.6.0", features = [] }

[dev-dependencies]
dioxus-cli = "0.6.3"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
